# OpenNOVAProject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: technical-charter.md
nova_syntheia/: __init__.py  config.py  orchestrator.py
nova_syntheia/agents/: __init__.py  base.py
nova_syntheia/agents/custodian/: __init__.py  ledger_custodian.py
nova_syntheia/agents/executive/: __init__.py  operations.py  portfolio.py
nova_syntheia/agents/federal_reserve/: __init__.py  monetary_policy.py
nova_syntheia/agents/judicial/: __init__.py  policy_evaluation.py
nova_syntheia/constitution/: __init__.py  parser.py  schema.py
nova_syntheia/dashboard/: __init__.py  app.py
nova_syntheia/governance/: __init__.py  citations.py  deliberative_cycle.py  due_process.py  emergency.py  permissions.py
nova_syntheia/integrations/: alpaca_client.py
nova_syntheia/ledger/: __init__.py  audit.py  models.py  service.py
tests/: __init__.py  test_deliberative_cycle.py  test_ledger.py  test_permissions.py  test_schema.py
