[project]
name = "nova-syntheia"
version = "0.1.0"
description = "Nova Syntheia — A Constitutional Polity of Human and Artificial Members"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",

    # LLM provider abstraction
    "litellm>=1.40.0",

    # Data validation & schemas
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database (National Ledger)
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Vector database (Constitutional citations & precedent)
    "chromadb==0.5.23",

    # Web dashboard
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",

    # Brokerage integration
    "alpaca-py>=0.28.0",

    # HTTP client
    "httpx>=0.27.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
